--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -45,7 +45,7 @@
           <tr>
             <td>{{ asset['name'] }}</td>
             <td>{{ asset['type'] }}</td>
-            <td>{{ asset['serial'] }}</td>
+            <td>{{ asset['serial_number'] }}</td>
             <td>{{ asset['owner_username'] }}</td>
             <td>{{ asset['department_name'] or '—' }}</td>
             <td>{{ asset['date_created'] }}</td>
