--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -19,7 +19,7 @@
         <a href="{{ url_for('dashboard') }}">Dashboard</a>
         <a href="{{ url_for('assets') }}">Assets</a>
         <a href="{{ url_for('departments') }}">Departments</a>
-        {% if user['role'] == 'admin' %}
+        {% if user['role'] == 'Admin' %}
         <a href="{{ url_for('users') }}">Users</a>
         {% endif %}
       </nav>
