--- a/static/css/style.css
+++ b/static/css/style.css
@@ -14,6 +14,8 @@ body {
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
   width: 100%;
   max-width: 400px;
+  position: absolute;
+  top: 20%;
 }
 
 h2 {
