--- a/static/css/assets.css
+++ b/static/css/assets.css
@@ -85,7 +85,7 @@ th {
 }
 .modal input,
 .modal select {
-  width: 100%;
+  width: auto;
   padding: 8px 10px;
   margin-bottom: 15px;
   border: 1px solid #ccc;
