--- a/templates/departments.html
+++ b/templates/departments.html
@@ -73,6 +73,15 @@
           {% endfor %}
         </tbody>
       </table>
+      {% with messages = get_flashed_messages(with_categories=true) %} {% if
+      messages %}
+      <div class="flash-messages">
+        {% for category, message in messages %}
+        <div class="flash {{ category }}">{{ message }}</div>
+        {% endfor %}
+      </div>
+      {% endif %} {% endwith %}
+    </div>
     </div>
 
     {% if user['role'] == 'Admin' %}
