--- a/static/css/dashboard.css
+++ b/static/css/dashboard.css
@@ -28,6 +28,24 @@ form {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.05);
 }
 
+.logo {
+  display: block;
+  margin: 0;
+  padding: 0;
+  position: absolute;
+  width: 150px;
+}
+.pending-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: -1rem;
+}
+.heading-text {
+  margin: 0;
+  padding: 0;
+}
+
 .nav-links {
   display: flex;
   justify-content: center;
