--- a/templates/users.html
+++ b/templates/users.html
@@ -21,7 +21,6 @@
         <a href="{{ url_for('departments') }}">Departments</a>
         <a href="{{ url_for('assets') }}">Assets</a>
       </nav>
-
       <button class="btn btn-create" id="openCreateModal">
         + Create New User
       </button>
@@ -121,7 +120,14 @@
           </select>
           {% else %}
           <label for="role">Assigned Role</label>
-          <input type="text" id="role" value="{{ user['role'] }}" disabled />
+          <input
+            type="text"
+            id="role"
+            name="role"
+            value="{{ user['role'] }}"
+            disabled
+          />
+          <input type="hidden" name="role" value="{{ user['role'] }}" />
           {% endif %}
 
           <div class="modal-buttons">
