--- a/static/css/assets.css
+++ b/static/css/assets.css
@@ -1,8 +1,8 @@
 .assets-container {
-  max-width: 1000px;
   margin: 40px auto;
   padding: 20px;
   background: #fff;
+  width: auto;
   border-radius: 12px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.05);
   position: relative;
