--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,6 +1,6 @@
 body {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  background: #f5f7fa;
+  background: #006747;
   display: flex;
   align-items: center;
   justify-content: center;
