--- a/templates/assets.html
+++ b/templates/assets.html
@@ -16,9 +16,9 @@
     <div class="assets-container">
       <h2 class="text-center">Assets</h2>
       <nav class="nav-links">
-        <a href="{{ url_for('dashboard') }}">Dashboard</a>
-        <a href="{{ url_for('departments') }}">Departments</a>
-        <a href="{{ url_for('users') }}">Users</a>
+        <a href="{{ url_for('dashboard.dashboard') }}">Dashboard</a>
+        <a href="{{ url_for('departments.departments') }}">Departments</a>
+        <a href="{{ url_for('users.users') }}">Users</a>
       </nav>
 
       <button class="btn btn-create" id="openCreateModal">
@@ -62,7 +62,7 @@
               {% if user['role'] == 'Admin' and not asset['approved'] %}
               <form
                 method="post"
-                action="{{ url_for('approve_asset', asset_id=asset['id']) }}"
+                action="{{ url_for('assets.approve_asset', asset_id=asset['id']) }}"
                 style="display: inline"
               >
                 <button
@@ -93,7 +93,7 @@
               {% endif %} {% if user['role'] == 'Admin' %}
               <form
                 method="post"
-                action="{{ url_for('delete_asset', asset_id=asset['id']) }}"
+                action="{{ url_for('assets.delete_asset', asset_id=asset['id']) }}"
                 style="display: inline"
               >
                 <button
@@ -137,7 +137,7 @@
         <form
           method="post"
           id="assetForm"
-          action="{{ url_for('create_asset') }}"
+          action="{{ url_for('assets.create_asset') }}"
         >
           <input type="hidden" name="asset_id" id="asset_id" />
 
@@ -223,7 +223,7 @@
       // create modal
       openCreateModalBtn.addEventListener("click", () => {
         modalTitle.textContent = "Create Asset";
-        assetForm.action = "{{ url_for('create_asset') }}";
+        assetForm.action = "{{ url_for('assets.create_asset') }}";
         assetForm.reset();
         document.getElementById("asset_id").value = "";
         const isAdmin = "{{ user['role'] }}" === "Admin";
