--- a/templates/login.html
+++ b/templates/login.html
@@ -30,7 +30,7 @@
 
       <p>
         Don't have an account?
-        <a href="{{ url_for('register') }}">Register here</a>.
+        <a href="{{ url_for('auth.register') }}">Register here</a>.
       </p>
     </div>
   </body>
