--- a/templates/register.html
+++ b/templates/register.html
@@ -30,7 +30,7 @@
 
       <p>
         Already have an account?
-        <a href="{{ url_for('login') }}">Login here</a>.
+        <a href="{{ url_for('auth.login') }}">Login here</a>.
       </p>
     </div>
   </body>
