--- a/static/css/dashboard.css
+++ b/static/css/dashboard.css
@@ -220,3 +220,21 @@ form {
   background-color: #6c757d;
   color: white;
 }
+.metrics-container {
+  display: flex;
+  margin-top: 20px;
+  gap: 1rem;
+  flex-wrap: wrap;
+}
+
+.metrics-box {
+  flex: 1;
+  min-width: 150px;
+  border-radius: 8px;
+  text-align: center;
+}
+
+.metrics-text {
+  font-size: 1.5rem;
+  font-weight: bold;
+}
